--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Ricemilk1122 Blog since 2023</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script defer src="index.js"></script>
   </head>
   <body>
     <div id="app"></div>
